# KDV

kde_cuda/: CMakeLists.txt  ParallelUtils-copy.txt  ParallelUtils.cmake  README.txt  cmake-prev.txt  kde_cuda.cu  kde_cuda_kdtr.cu  kde_cuda_old.cu  pntsCUDA.csv  redwood_GPU.asc  run_kdtr.sh  run_normal.sh  run_old.sh
